# systems-admin-agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
deploy/: apache-reverse-proxy.conf  setup-domain.sh  sysadmin-agent.service
src/: index.js
src/approval/: ApprovalManager.js
src/connection/: SSHManager.js
src/diagnostics/: DiagnosticEngine.js
src/discovery/: AppDiscovery.js  OSDetector.js
src/rollback/: RollbackManager.js
src/utils/: formatters.js
sysadmin_agent/: __init__.py  __main__.py  cli.py
sysadmin_agent/ai/: __init__.py  brain.py
sysadmin_agent/approval/: __init__.py  approval_manager.py
sysadmin_agent/connection/: __init__.py  ssh_manager.py
sysadmin_agent/diagnostics/: __init__.py  diagnostic_engine.py  wordpress_checks.py
sysadmin_agent/discovery/: __init__.py  app_discovery.py  os_detector.py
sysadmin_agent/knowledge/: __init__.py  doc_fetcher.py
sysadmin_agent/memory/: __init__.py  conversation_memory.py
sysadmin_agent/profiles/: profile_manager.py
sysadmin_agent/rollback/: __init__.py  rollback_manager.py
sysadmin_agent/rust/: __init__.py  pterodactyl_api.py  rcon_client.py  rust_diagnostics.py
sysadmin_agent/updater/: updater.py
tests/: ApprovalManager.test.js  OSDetector.test.js  RollbackManager.test.js  SSHManager.test.js  test_app_discovery.py  test_approval_manager.py  test_conversation_memory.py  test_diagnostic_engine.py  test_os_detector.py  test_profile_manager.py  test_rollback_manager.py  test_ssh_manager.py  test_updater.py  test_wordpress_checks.py
(+11 files in other folders)
