[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysadmin-agent"
version = "2.0.0"
description = "AI-powered systems administration agent with SSH remote management"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.0",
    "anthropic>=0.39",
    "rich>=13.0",
    "click>=8.0",
    "flask>=3.0",
    "flask-socketio>=5.0",
    "python-dotenv>=1.0",
    "websocket-client>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
sysadmin-agent = "sysadmin_agent.cli:main"

[tool.setuptools.packages.find]
include = ["sysadmin_agent*"]
